--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -54,8 +54,8 @@
     }
 
     &:active {
-      border-color: $ray-color-blue-70;
       background-color: $ray-color-blue-70;
+      border-color: $ray-color-blue-70;
     }
 
     &.#{$ray-class-prefix}button--danger {
@@ -68,12 +68,12 @@
       }
 
       &:focus {
-        background-color: $ray-color-red-70;
-        border-color: $ray-color-red-70;
+        box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
       }
 
       &:active {
-        box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
+        background-color: $ray-color-red-70;
+        border-color: $ray-color-red-70;
       }
 
       &[disabled] {
@@ -115,11 +115,11 @@
       }
 
       &:focus {
-        background-color: $ray-color-red-20;
+        box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
       }
 
       &:active {
-        box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
+        background-color: $ray-color-red-20;
       }
 
       &[disabled] {
@@ -156,7 +156,6 @@
     border-color: transparent;
 
     &:hover {
-      color: $ray-color-blue-60;
       background-color: $ray-color-gray-02;
     }
 
@@ -165,18 +164,18 @@
     }
 
     &:active {
-      background-color: $ray-color-gray-10;
+      background-color: $ray-color-blue-10;
     }
 
     &.#{$ray-class-prefix}button--danger {
       color: $ray-color-red-50;
 
-      &:hover {
-        color: $ray-color-red-60;
-      }
-
       &:focus {
         box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
+      }
+
+      &:active {
+        background-color: $ray-color-red-10;
       }
 
       &[disabled] {
