--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -227,6 +227,27 @@
     top: -0.5em;
   }
 
+  a,
+  .#{$ray-class-prefix}link {
+    color: $ray-link-color;
+    text-decoration: none;
+    appearance: none;
+    border: 0;
+    outline: 0;
+    background: none;
+    padding: 0;
+    display: inline;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &:focus {
+      text-decoration: underline;
+    }
+  }
+
   .#{$ray-class-prefix}running-text {
     h1,
     h2,
