--- a/packages/core/src/global/_variables.scss
+++ b/packages/core/src/global/_variables.scss
@@ -9,6 +9,7 @@ $ray-font-stack-mono: 'Apercu Mono', 'Consolas', 'Bitstream Vera Sans Mono',
 $ray-base-font-size: 16px;
 
 $ray-assign-typography-styles-natively: true !default;
+$ray-link-color: $ray-color-blue-50;
 
 $ray-css-reset: true !default;
 $ray-css-normalize: true !default;
