--- a/packages/core/src/components/card/_card.scss
+++ b/packages/core/src/components/card/_card.scss
@@ -23,7 +23,7 @@
       }
 
       &:focus {
-        box-shadow: 0 0 0 3px transparentize($ray-color-blue-50, 0.75);
+        box-shadow: $ray-box-shadow-focus-state;
       }
 
       &:hover {
