fix(typography): running-text should apply list styles

--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -293,6 +293,11 @@
     blockquote {
       @extend .#{$ray-class-prefix}blockquote;
     }
+
+    ul,
+    ol {
+      @extend .#{$ray-class-prefix}list;
+    }
   }
 
   @if global-variable-exists(ray-assign-typography-styles-natively) ==
