--- a/packages/docs-app/src/components/CodeExample/code-example.scss
+++ b/packages/docs-app/src/components/CodeExample/code-example.scss
@@ -60,7 +60,7 @@ pre[class*='language-'] {
   flex-direction: column;
   justify-content: space-between;
   overflow-y: hidden;
-  transition: $transition--base;
+  transition: $transition--base; // stylelint-disable-line property-blacklist
   border-bottom-left-radius: $ray-border-radius;
   border-bottom-right-radius: $ray-border-radius;
 
@@ -71,28 +71,8 @@ pre[class*='language-'] {
 
 .code-example__expand {
   position: absolute;
-  bottom: rem(2px);
-  right: rem(2px);
-  color: $temp-text;
-  background-color: $temp-bg;
-  border: none;
-  padding: 1rem;
-  right: 0;
-  cursor: pointer;
-
-  span {
-    font-size: rem(12px);
-  }
-
-  &--icon {
-    margin-left: 0.5rem;
-    fill: $temp-text;
-    transition: $transition--base;
-
-    &--rotated {
-      transform: rotate(180deg);
-    }
-  }
+  bottom: 0.5rem;
+  right: 0.5rem;
 
   &--hidden {
     display: none;
