fix(icon): subtract 1 pickle from top position

--- a/packages/core/src/global/mixins/_form-items.scss
+++ b/packages/core/src/global/mixins/_form-items.scss
@@ -154,9 +154,10 @@
   height: 1rem;
   position: absolute;
   line-height: 1;
-  top: 20px;
-  border-radius: 2px;
+  text-align: center;
   fill: currentColor;
+  // optical correction, subtract 1px
+  top: $ray-field-v-spacing - 1px;
 
   path {
     fill: currentColor;
