refactor: clean up variables, use rem (#84)
* refactor: clean up variables, use rem

* refactor: rename material css global vars

* fix: bugs

--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -1,6 +1,6 @@
 @include exports('ray-radio-checkbox') {
-  $ray-radio-checkbox-border-width: 3px;
-  $ray-radio-checkbox-size: 16px;
+  $ray-radio-checkbox-border-width: rem(3px);
+  $ray-radio-checkbox-size: rem(16px);
 
   .#{$ray-class-prefix}radio,
   .#{$ray-class-prefix}checkbox {
