--- a/packages/core/src/global/material-grid/mdc-layout-grid.scss
+++ b/packages/core/src/global/material-grid/mdc-layout-grid.scss
@@ -18,79 +18,79 @@
 // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 // THE SOFTWARE.
 
-@import './variables';
-@import './mixins';
+@import '../variables';
 @import '../mixins/exports';
+@import './mixins';
 
 @include exports('ray-grid') {
   :root {
-    @each $size in map-keys($mdc-layout-grid-columns) {
-      --mdc-layout-grid-margin-#{$size}: #{map-get(
-          $mdc-layout-grid-default-margin,
+    @each $size in map-keys($ray-layout-grid-columns) {
+      --ray-layout-grid-margin-#{$size}: #{map-get(
+          $ray-layout-grid-default-margin,
           $size
         )};
-      --mdc-layout-grid-gutter-#{$size}: #{map-get(
-          $mdc-layout-grid-default-gutter,
+      --ray-layout-grid-gutter-#{$size}: #{map-get(
+          $ray-layout-grid-default-gutter,
           $size
         )};
-      --mdc-layout-grid-column-width-#{$size}: #{map-get(
-          $mdc-layout-grid-column-width,
+      --ray-layout-grid-column-width-#{$size}: #{map-get(
+          $ray-layout-grid-column-width,
           $size
         )};
     }
   }
 
   // postcss-bem-linter: define layout-grid
-  .#{$mdc-prefix}grid {
-    @each $size in map-keys($mdc-layout-grid-columns) {
+  .#{$ray-class-prefix}grid {
+    @each $size in map-keys($ray-layout-grid-columns) {
       @include mdc-layout-grid-media-query_($size) {
-        $margin: map-get($mdc-layout-grid-default-margin, $size);
-        $max-width: map-get($mdc-layout-grid-max-width, $size);
+        $margin: map-get($ray-layout-grid-default-margin, $size);
+        $max-width: map-get($ray-layout-grid-max-width, $size);
 
         @include mdc-layout-grid($size, $margin, $max-width);
       }
     }
   }
 
-  .#{$mdc-prefix}grid__inner {
-    @each $size in map-keys($mdc-layout-grid-columns) {
+  .#{$ray-class-prefix}grid__inner {
+    @each $size in map-keys($ray-layout-grid-columns) {
       @include mdc-layout-grid-media-query_($size) {
-        $margin: map-get($mdc-layout-grid-default-margin, $size);
-        $gutter: map-get($mdc-layout-grid-default-gutter, $size);
+        $margin: map-get($ray-layout-grid-default-margin, $size);
+        $gutter: map-get($ray-layout-grid-default-gutter, $size);
 
         @include mdc-layout-grid-inner($size, $margin, $gutter);
       }
     }
   }
 
-  .#{$mdc-prefix}grid__cell {
+  .#{$ray-class-prefix}grid__cell {
     // select the upper breakpoint
-    $upper-breakpoint: nth(map-keys($mdc-layout-grid-columns), 1);
+    $upper-breakpoint: nth(map-keys($ray-layout-grid-columns), 1);
 
-    @each $size in map-keys($mdc-layout-grid-columns) {
+    @each $size in map-keys($ray-layout-grid-columns) {
       @include mdc-layout-grid-media-query_($size) {
-        $gutter: map-get($mdc-layout-grid-default-gutter, $size);
+        $gutter: map-get($ray-layout-grid-default-gutter, $size);
 
         @include mdc-layout-grid-cell(
           $size,
-          $mdc-layout-grid-default-column-span,
+          $ray-layout-grid-default-column-span,
           $gutter
         );
 
         &--span-full {
-          $max-columns: map-get($mdc-layout-grid-columns, $size);
+          $max-columns: map-get($ray-layout-grid-columns, $size);
 
           @include mdc-layout-grid-cell($size, $max-columns, $gutter);
         }
 
         @for $span
           from 1
-          through map-get($mdc-layout-grid-columns, $upper-breakpoint)
+          through map-get($ray-layout-grid-columns, $upper-breakpoint)
         {
           // Span classes.
           // stylelint-disable max-nesting-depth
-          @at-root .#{$mdc-prefix}grid__cell--span-#{$span},
-            .#{$mdc-prefix}grid__cell--span-#{$span}-#{$size} {
+          @at-root .#{$ray-class-prefix}grid__cell--span-#{$span},
+            .#{$ray-class-prefix}grid__cell--span-#{$span}-#{$size} {
             @include mdc-layout-grid-cell-span_($size, $span, $gutter);
           }
           // stylelint-enable max-nesting-depth
@@ -99,7 +99,7 @@
     }
 
     // Order override classes.
-    @for $i from 1 through map-get($mdc-layout-grid-columns, $upper-breakpoint)
+    @for $i from 1 through map-get($ray-layout-grid-columns, $upper-breakpoint)
     {
       &--order-#{$i} {
         @include mdc-layout-grid-cell-order($i);
@@ -120,30 +120,30 @@
     }
   }
 
-  .#{$mdc-prefix}grid--align-left {
+  .#{$ray-class-prefix}grid--align-left {
     margin-right: auto;
     margin-left: 0;
   }
 
-  .#{$mdc-prefix}grid--align-right {
+  .#{$ray-class-prefix}grid--align-right {
     margin-right: 0;
     margin-left: auto;
   }
 
-  .#{$mdc-prefix}grid--justify-left {
-    > .#{$mdc-prefix}grid__inner {
+  .#{$ray-class-prefix}grid--justify-left {
+    > .#{$ray-class-prefix}grid__inner {
       justify-content: left;
     }
   }
 
-  .#{$mdc-prefix}grid--justify-center {
-    > .#{$mdc-prefix}grid__inner {
+  .#{$ray-class-prefix}grid--justify-center {
+    > .#{$ray-class-prefix}grid__inner {
       justify-content: center;
     }
   }
 
-  .#{$mdc-prefix}grid--justify-right {
-    > .#{$mdc-prefix}grid__inner {
+  .#{$ray-class-prefix}grid--justify-right {
+    > .#{$ray-class-prefix}grid__inner {
       justify-content: right;
     }
   }
