fix: merge conflict with rem variable (#90)

--- a/packages/core/src/global/mixins/_form-items.scss
+++ b/packages/core/src/global/mixins/_form-items.scss
@@ -157,7 +157,7 @@
   text-align: center;
   fill: currentColor;
   // optical correction, subtract 1px
-  top: $ray-field-v-spacing - 1px;
+  top: $ray-field-v-spacing - rem(1px);
 
   path {
     fill: currentColor;
