--- a/packages/core/src/global/material-grid/mdc-layout-grid.scss
+++ b/packages/core/src/global/material-grid/mdc-layout-grid.scss
@@ -94,6 +94,14 @@
             @include mdc-layout-grid-cell-span_($size, $span, $gutter);
           }
           // stylelint-enable max-nesting-depth
+
+          // Push classes.
+          // stylelint-disable max-nesting-depth
+          @at-root .#{$ray-class-prefix}grid__cell--push-#{$span},
+            .#{$ray-class-prefix}grid__cell--push-#{$span}-#{$size} {
+            @include mdc-layout-grid-cell-push_($size, $span, $gutter);
+          }
+          // stylelint-enable max-nesting-depth
         }
       }
     }
