fix(grid): add css debugger (#99)

--- a/packages/core/src/global/material-grid/mdc-layout-grid.scss
+++ b/packages/core/src/global/material-grid/mdc-layout-grid.scss
@@ -25,6 +25,10 @@
 @include exports('ray-grid') {
   :root {
     @each $size in map-keys($ray-layout-grid-columns) {
+      --ray-layout-grid-columns-#{$size}: #{map-get(
+          $ray-layout-grid-columns,
+          $size
+        )};
       --ray-layout-grid-margin-#{$size}: #{map-get(
           $ray-layout-grid-default-margin,
           $size
