--- a/packages/core/stories/styles/index.scss
+++ b/packages/core/stories/styles/index.scss
@@ -1,4 +1,5 @@
 @import '../../src/ray-core.scss';
+@import '../../src/ray-debug.scss';
 
 .ray-color-white {
   background-color: $ray-color-white;
