--- a/packages/docs-app/src/styles/index.scss
+++ b/packages/docs-app/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import '../../../core/src/ray-core.scss';
+@import '../../../core/src/ray-debug.scss';
 
 $font-family: 'Apercu', 'Avenir', 'Helvetica Neue', Arial, sans-serif;
 $transition--base: 0.3s;
