--- a/packages/core/src/global/mixins/_form-items.scss
+++ b/packages/core/src/global/mixins/_form-items.scss
@@ -41,10 +41,10 @@
   &::before {
     content: '';
     width: calc(100% + #{$ray-field-h-spacing} / 2);
-    height: 1px;
+    height: 0.1875rem;
     background-color: $ray-color-white;
     position: absolute;
-    top: 5px;
+    top: 0.25rem;
     left: -1 * $ray-field-h-spacing / 2;
     z-index: -1;
   }
