fix(color): add yellow (#104)
* fix(color): add yellow

* fix: add rounding to color vars in docs

--- a/packages/core/src/ray-exports.scss
+++ b/packages/core/src/ray-exports.scss
@@ -32,6 +32,7 @@
   ray-color-blue-50: $ray-color-blue-50;
   ray-color-blue-60: $ray-color-blue-60;
   ray-color-blue-70: $ray-color-blue-70;
+  ray-color-yellow-50: $ray-color-yellow-50;
   ray-color-red-10: $ray-color-red-10;
   ray-color-red-20: $ray-color-red-20;
   ray-color-red-50: $ray-color-red-50;
