--- a/packages/core/src/global/_colors.scss
+++ b/packages/core/src/global/_colors.scss
@@ -7,6 +7,8 @@ $ray-color-blue-50: hsl(240, 100%, 100% - 50%);
 $ray-color-blue-60: hsl(240, 100%, 100% - 60%);
 $ray-color-blue-70: hsl(240, 100%, 100% - 70%);
 
+$ray-color-yellow-50: hsl(50, 100%, 100% - 50%);
+
 $ray-color-red-10: hsl(0, 100%, 100% - 10%);
 $ray-color-red-20: hsl(0, 100%, 100% - 20%);
 $ray-color-red-50: hsl(0, 100%, 100% - 50%);
