--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -169,13 +169,12 @@
   }
 
   .#{$ray-class-prefix}blockquote {
-    padding: $ray-spacing-md;
+    padding: $ray-spacing-lg;
     margin: $ray-spacing-lg 0;
     background-color: $ray-color-gray-02;
-    color: $ray-color-text-dark;
     border-radius: $ray-border-radius;
     border: 1px solid $ray-color-gray-10;
-    border-left: 2px solid $ray-color-blue-50;
+    color: $ray-color-text-dark;
   }
 
   .#{$ray-class-prefix}blockquote__footer {
