feat(tag): add tag component and docs (#107)
* feat(tag): add tag component and docs

* docs(tag): update page intro

--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -17,3 +17,4 @@
 @import './components/image/image';
 @import './components/table/table';
 @import './components/tabs/tabs';
+@import './components/tag/tag';
