refactor(typography): styles should only set bottom margin (#117)

--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -4,84 +4,84 @@
   font-size: 4rem;
   font-weight: 600;
   line-height: 5rem;
-  margin: 0 0 2rem;
+  margin-bottom: 2rem;
 }
 
 @mixin ray-display-2 {
   font-size: 3rem;
   font-weight: 600;
   line-height: 4rem;
-  margin: 0 0 2rem;
+  margin-bottom: 2rem;
 }
 
 @mixin ray-h1 {
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 3.5rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-h2 {
   font-size: 2rem;
   font-weight: 600;
   line-height: 2.75rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-h3 {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 2.25rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-h4 {
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 2rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-h5 {
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.75rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-h6 {
   font-size: 0.875rem;
   font-weight: 600;
   line-height: 1.5rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.75rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-body-large {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 2rem;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
 }
 
 @mixin ray-body-small {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5rem;
-  margin: 0 0 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 @mixin ray-body-x-small {
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.25rem;
-  margin: 0 0 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 @include exports('ray-typography') {
