fix(text-field): change label color to red when error
fix #4

--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -97,6 +97,11 @@
 
     &--error {
       border-color: $ray-color-red-50;
+
+      .#{$ray-class-prefix}text-field__label,
+      .#{$ray-class-prefix}text-area__label {
+        color: $ray-color-red-50;
+      }
     }
 
     [disabled] {
