--- a/packages/core/src/ray-exports.scss
+++ b/packages/core/src/ray-exports.scss
@@ -44,6 +44,7 @@
   ray-color-green-80: $ray-color-green-80;
   ray-color-green-90: $ray-color-green-90;
   ray-color-gray-02: $ray-color-gray-02;
+  ray-color-gray-03: $ray-color-gray-03;
   ray-color-gray-10: $ray-color-gray-10;
   ray-color-gray-30: $ray-color-gray-30;
   ray-color-gray-50: $ray-color-gray-50;
