feat(chip): add the chip component

--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -10,6 +10,7 @@
 @import './global/material-grid/mdc-layout-grid';
 
 @import './components/card/card';
+@import './components/chip/chip';
 @import './components/button/button';
 @import './components/breadcrumb/breadcrumb';
 @import './components/radio-checkbox/radio-checkbox';
