--- a/packages/core/src/global/material-grid/_mixins.scss
+++ b/packages/core/src/global/material-grid/_mixins.scss
@@ -103,7 +103,7 @@
     $percent: 100%;
   }
 
-  $margin: var(--ray-layout-grid-gutter-#{$size}, #{$gutter}) / 2;
+  $margin: $gutter / 2;
 
   margin-left: calc(#{$margin} + #{$percent}) !important;
 }
