--- a/packages/core/src/components/image/_image.scss
+++ b/packages/core/src/components/image/_image.scss
@@ -41,11 +41,10 @@ $ray-image-ratio-map: (
 }
 
 .#{$ray-class-prefix}caption {
-  font-size: 0.75rem;
-  line-height: 1.25rem;
+  @include ray-body-x-small;
+
   max-height: 2.5rem;
-  font-family: $ray-font-stack-mono;
-  text-transform: uppercase;
+  color: $ray-color-gray-60;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
