feat(component): allow multi-row textarea
when rows are provided to a textarea, the fixed height is removed and set to "auto"

--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -169,4 +169,10 @@
       }
     }
   }
+
+  textarea[rows].#{$ray-class-prefix}text-area {
+    &__input {
+      height: auto !important;
+    }
+  }
 }
