fix: fix storybook and adjust scss

--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -170,7 +170,7 @@
     }
   }
 
-  textarea[rows].#{$ray-class-prefix}text-area {
+  [rows].#{$ray-class-prefix}text-area {
     &__input {
       height: auto !important;
     }
