--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -172,7 +172,8 @@
 
   [rows].#{$ray-class-prefix}text-area {
     &__input {
-      height: auto !important;
+      height: auto; // ie11 fallback
+      height: unset;
     }
   }
 }
