fix(textarea): allow multi-row textarea (#16)
* feat(component): allow multi-row textarea

when rows are provided to a textarea, the fixed height is removed and set to "auto"

* fix: fix storybook and adjust scss

* Update docs/components/text-field.md

Co-Authored-By: i8ramin <49030+i8ramin@users.noreply.github.com>

* Update packages/core/src/components/text-field/_text-field.scss

Co-Authored-By: i8ramin <49030+i8ramin@users.noreply.github.com>

--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -169,4 +169,11 @@
       }
     }
   }
+
+  [rows].#{$ray-class-prefix}text-area {
+    &__input {
+      height: auto; // ie11 fallback
+      height: unset;
+    }
+  }
 }
