--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -88,7 +88,7 @@
   .#{$ray-class-prefix}text--display-1 {
     @include ray-h1;
 
-    @media (min-width: map-get($ray-grid-breakpoints, lg)) {
+    @media (min-width: map-get($ray-layout-grid-breakpoints, desktop)) {
       @include ray-display-1;
     }
   }
@@ -96,7 +96,7 @@
   .#{$ray-class-prefix}text--display-2 {
     @include ray-h1;
 
-    @media (min-width: map-get($ray-grid-breakpoints, lg)) {
+    @media (min-width: map-get($ray-layout-grid-breakpoints, desktop)) {
       @include ray-display-2;
     }
   }
@@ -114,7 +114,7 @@
   .#{$ray-class-prefix}text--h1 {
     @include ray-h2;
 
-    @media (min-width: map-get($ray-grid-breakpoints, md)) {
+    @media (min-width: map-get($ray-layout-grid-breakpoints, tablet)) {
       @include ray-h1;
     }
   }
@@ -122,7 +122,7 @@
   .#{$ray-class-prefix}text--h2 {
     @include ray-h3;
 
-    @media (min-width: map-get($ray-grid-breakpoints, md)) {
+    @media (min-width: map-get($ray-layout-grid-breakpoints, tablet)) {
       @include ray-h2;
     }
   }
@@ -130,7 +130,7 @@
   .#{$ray-class-prefix}text--h3 {
     @include ray-h4;
 
-    @media (min-width: map-get($ray-grid-breakpoints, md)) {
+    @media (min-width: map-get($ray-layout-grid-breakpoints, tablet)) {
       @include ray-h3;
     }
   }
