--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -5,6 +5,7 @@
 @import './global/variables';
 @import './global/base';
 @import './global/typography';
+@import './global/responsive-includes';
 @import './global/material-grid/mdc-layout-grid';
 
 @import './components/card/card';
